--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   publish:
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' || startsWith(github.ref, 'refs/tags/v')
     needs: [build]
     runs-on: ubuntu-latest
 
